# mxnet-insightface-linux

./: CMakeLists.txt
face-recognition/: CMakeLists.txt
face-recognition/include/mxnet/: c_predict_api.h
face-recognition/include/mxnet-cpp/: op.h
face-recognition/src/: api_usages.hpp  buffer_file.hpp  comm_lib.hpp  face_align.hpp  face_recognize_api.cpp  face_recognize_api.h  mtcnn.hpp  mxnet_mtcnn.hpp  recognizer.hpp  test.cpp  utils.hpp
include/mxnet-cpp/: op.h
src/: api_usages.hpp  comm_lib.cpp  comm_lib.hpp  face_recognize_api.cpp  face_recognize_api.h  mxnet_mtcnn.cpp  mxnet_mtcnn.hpp
